--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,30 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/blankFragment">
-
+    app:startDestination="@id/loginFragment">
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.template.common.presentation.ui.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment_to_profilrFragment"
-            app:destination="@id/profilrFragment" />
+            android:id="@+id/action_loginFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
     </fragment>
     <fragment
-        android:id="@+id/profilrFragment"
+        android:id="@+id/profileFragment"
         android:name="com.example.template.common.presentation.ui.ProfileFragment"
-        android:label="fragment_profilr"
+        android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
-
-    <fragment
-        android:id="@+id/blankFragment"
-        android:name="com.example.template.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" >
-        <action
-            android:id="@+id/action_blankFragment_to_profilrFragment"
-            app:destination="@id/profilrFragment" />
-    </fragment>
 </navigation>
